Fix documentation links after file reorganization
Update all references to moved files in documentation:
- jest.critical-coverage.config.js now at config/jest.critical-coverage.config.js
- test-perplexity-api.js now at scripts/test-perplexity-api.js
- test-message-formatting.js now at scripts/test-message-formatting.js
- diagnose-restart-loop.sh now at scripts/diagnose-restart-loop.sh
- find-sigint-source.sh now at scripts/find-sigint-source.sh

Updated files:
- .github/copilot-instructions.md - Script paths
- .github/workflows/critical-coverage.yml - Jest config path
- package.json - Jest config paths
- docs/CRITICAL-COVERAGE-CI-INTEGRATION.md - Jest config paths
- docs/CRITICAL-COVERAGE-SUCCESS-SUMMARY.md - Jest config path reference
- docs/PRODUCTION-API-400-FIX.md - Script path
- docs/QUICK-FIX-SUMMARY.md - Script path reference
- docs/RELEASE-NOTES-v1.8.0.md - Jest config path reference
- wiki/CI-CD-Pipeline.md - Jest config path reference
- wiki/Testing-Guide.md - Jest config path reference
- QLTY/QLTY-APPLICATION-SUMMARY.md - Jest config path reference
- QLTY/RESTART-LOOP-FIX.md - Script paths

All documentation now reflects new folder structure.

--- a/.github/workflows/critical-coverage.yml
+++ b/.github/workflows/critical-coverage.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Run Critical Coverage Tests
       run: |
         echo "🔍 Running critical file coverage check..."
-        npx jest --config=jest.critical-coverage.config.js --coverage --silent --passWithNoTests
+        npx jest --config=config/jest.critical-coverage.config.js --coverage --silent --passWithNoTests
         echo "✅ Critical coverage check completed"
       env:
         CI: true
