--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "dev": "nodemon src/index.js",
     "test": "jest",
     "test:ci": "jest --ci --coverage --reporters=default --reporters=jest-junit",
-    "test:critical": "jest --config=jest.critical-coverage.config.js --coverage",
-    "test:critical:ci": "jest --config=jest.critical-coverage.config.js --coverage --silent --passWithNoTests --ci",
-    "coverage:critical": "jest --config=jest.critical-coverage.config.js --coverage --coverageReporters=lcov --coverageReporters=text-summary",
+    "test:critical": "jest --config=config/jest.critical-coverage.config.js --coverage",
+    "test:critical:ci": "jest --config=config/jest.critical-coverage.config.js --coverage --silent --passWithNoTests --ci",
+    "coverage:critical": "jest --config=config/jest.critical-coverage.config.js --coverage --coverageReporters=lcov --coverageReporters=text-summary",
     "precommit": "npm run test:critical:ci",
     "security": "npm audit --audit-level=high",
     "format:md": "prettier --write '**/*.md'",
