fix(ci): resolve coverage threshold failures in sharded test runs
Problem: CI test shards were failing with coverage threshold errors despite 70.64% actual coverage. Each of 3 parallel shards only covered ~33% of codebase, but Jest enforced 64% threshold per shard.

Solution:

- Disable coverage thresholds during CI shard mode (JEST_SHARD_MODE=true)

- Add post-merge coverage validation in CI workflow

- Validate merged coverage from all shards against 64% threshold

- Maintain threshold enforcement for local development

Files modified:

- jest.config.js: Conditional coverageThreshold based on JEST_SHARD_MODE

- .github/workflows/unified-ci.yml: Added validation step + env var

- docs/CI-COVERAGE-SHARDING-FIX.md: Complete documentation

Expected outcome:

- CI shards run without false threshold failures

- Coverage validated after merge (current: 70.64%)

- Local development maintains quality standards

--- a/.github/workflows/unified-ci.yml
+++ b/.github/workflows/unified-ci.yml
@@ -70,7 +70,7 @@ jobs:
         run: |
           if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             echo "Running tests with coverage (main branch)"
-            npm test -- --shard=${{ matrix.shard }}/3 --coverage --coverageReporters=json --coverageReporters=lcov
+            npm test -- --shard=${{ matrix.shard }}/3 --coverage --coverageReporters=json --coverageReporters=lcov --coverageReporters=json-summary
           else
             echo "Running tests without coverage (feature branch/PR)"
             npm test -- --shard=${{ matrix.shard }}/3 --no-coverage
@@ -78,6 +78,7 @@ jobs:
         env:
           CI: true
           NODE_ENV: test
+          JEST_SHARD_MODE: true
 
       - name: Upload coverage artifact
         if: github.ref == 'refs/heads/main'
@@ -112,6 +113,37 @@ jobs:
           pattern: coverage-shard-*
           merge-multiple: true
           path: coverage/
+
+      - name: Validate merged coverage thresholds
+        run: |
+          echo "Validating coverage thresholds after merging all shards..."
+          node -e "
+            const fs = require('fs');
+            const coverageSummary = JSON.parse(fs.readFileSync('coverage/coverage-summary.json', 'utf8'));
+            const { statements, branches, functions, lines } = coverageSummary.total;
+            
+            console.log('Coverage Summary:');
+            console.log(\`  Statements: \${statements.pct}%\`);
+            console.log(\`  Branches:   \${branches.pct}%\`);
+            console.log(\`  Functions:  \${functions.pct}%\`);
+            console.log(\`  Lines:      \${lines.pct}%\`);
+            
+            const threshold = 64;
+            const failures = [];
+            
+            if (statements.pct < threshold) failures.push(\`Statements: \${statements.pct}% < \${threshold}%\`);
+            if (branches.pct < threshold) failures.push(\`Branches: \${branches.pct}% < \${threshold}%\`);
+            if (functions.pct < threshold) failures.push(\`Functions: \${functions.pct}% < \${threshold}%\`);
+            if (lines.pct < threshold) failures.push(\`Lines: \${lines.pct}% < \${threshold}%\`);
+            
+            if (failures.length > 0) {
+              console.error('\\n❌ Coverage thresholds not met:');
+              failures.forEach(f => console.error(\`  - \${f}\`));
+              process.exit(1);
+            }
+            
+            console.log('\\n✅ All coverage thresholds met!');
+          "
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
