fix(ci): properly merge coverage from all test shards using nyc
Problem: Coverage artifacts were being downloaded but not merged - only one shard's coverage was being validated (52.6% instead of expected 70%+)

Solution: Use nyc merge to combine coverage-final.json from all 3 shards before validation

- Download shards to separate directories (coverage-shards/)

- Use 'npx nyc merge' to combine coverage data

- Generate merged reports with nyc report

- Validate merged coverage against 64% threshold

--- a/.github/workflows/unified-ci.yml
+++ b/.github/workflows/unified-ci.yml
@@ -107,12 +107,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Download coverage artifacts
+      - name: Download all coverage artifacts
         uses: actions/download-artifact@v4
         with:
           pattern: coverage-shard-*
-          merge-multiple: true
-          path: coverage/
+          path: coverage-shards/
+
+      - name: Merge coverage reports
+        run: |
+          echo "Merging coverage from all shards..."
+          npx nyc merge coverage-shards coverage/coverage-final.json
+          npx nyc report --reporter=json-summary --reporter=lcov --reporter=text --temp-dir=. --report-dir=coverage
 
       - name: Validate merged coverage thresholds
         run: |
