--- a/.github/workflows/unified-ci.yml
+++ b/.github/workflows/unified-ci.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Security audit
         run: npm audit --audit-level=high --production
 
-  # Parallel test shards (3x faster than sequential)
+  # Parallel test shards (3x faster than sequential) - NO COVERAGE
   test:
     name: Test (Shard ${{ matrix.shard }}/3)
     runs-on: ubuntu-latest
@@ -66,34 +66,17 @@ jobs:
       - name: Clear Jest cache
         run: npx jest --clearCache
 
-      - name: Run tests (with coverage on main only)
-        run: |
-          if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
-            echo "Running tests with coverage (main branch)"
-            npm test -- --shard=${{ matrix.shard }}/3 --coverage --coverageReporters=json --coverageReporters=lcov --coverageReporters=json-summary
-          else
-            echo "Running tests without coverage (feature branch/PR)"
-            npm test -- --shard=${{ matrix.shard }}/3 --no-coverage
-          fi
+      - name: Run tests (no coverage - speed optimized)
+        run: npm test -- --shard=${{ matrix.shard }}/3 --no-coverage
         env:
           CI: true
           NODE_ENV: test
-          JEST_SHARD_MODE: true
 
-      - name: Upload coverage artifact
-        if: github.ref == 'refs/heads/main'
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-shard-${{ matrix.shard }}
-          path: coverage/
-          retention-days: 1
-
-  # Merge coverage from all shards and upload (main branch only)
+  # Full coverage run (main branch only, no sharding)
   coverage:
-    name: Merge Coverage
-    needs: test
-    if: github.ref == 'refs/heads/main'
+    name: Coverage
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -107,43 +90,18 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Download all coverage artifacts
-        uses: actions/download-artifact@v4
-        with:
-          pattern: coverage-shard-*
-          path: coverage-shards/
+      - name: Clear Jest cache
+        run: npx jest --clearCache
 
-      - name: Merge coverage reports
-        run: |
-          echo "Merging coverage from all shards..."
-          node -e "
-            const fs = require('fs');
-            const path = require('path');
-            
-            // Read all coverage-final.json files from shard directories
-            const shardDirs = fs.readdirSync('coverage-shards');
-            const mergedCoverage = {};
-            
-            shardDirs.forEach(shardDir => {
-              const coverageFile = path.join('coverage-shards', shardDir, 'coverage-final.json');
-              if (fs.existsSync(coverageFile)) {
-                const coverage = JSON.parse(fs.readFileSync(coverageFile, 'utf8'));
-                Object.assign(mergedCoverage, coverage);
-              }
-            });
-            
-            // Write merged coverage
-            fs.mkdirSync('coverage', { recursive: true });
-            fs.writeFileSync('coverage/coverage-final.json', JSON.stringify(mergedCoverage, null, 2));
-            console.log(\`Merged coverage from \${shardDirs.length} shards\`);
-          "
-          
-          # Generate coverage summary from merged data
-          npx nyc report --reporter=json-summary --reporter=lcov --reporter=text --temp-dir=coverage --report-dir=coverage
+      - name: Run full test suite with coverage
+        run: npm test -- --coverage
+        env:
+          CI: true
+          NODE_ENV: test
 
-      - name: Validate merged coverage thresholds
+      - name: Validate coverage thresholds
         run: |
-          echo "Validating coverage thresholds after merging all shards..."
+          echo "Validating coverage thresholds..."
           node -e "
             const fs = require('fs');
             const coverageSummary = JSON.parse(fs.readFileSync('coverage/coverage-summary.json', 'utf8'));
@@ -183,7 +141,7 @@ jobs:
   # Final status check (ensures all jobs pass)
   ci-status:
     name: CI Status
-    needs: [quality, test]
+    needs: [quality, test, coverage]
     if: always()
     runs-on: ubuntu-latest
     steps:
@@ -191,6 +149,10 @@ jobs:
         run: |
           if [[ "${{ needs.quality.result }}" == "failure" || "${{ needs.test.result }}" == "failure" ]]; then
             echo "❌ CI failed"
+            exit 1
+          fi
+          if [[ "${{ github.ref }}" == "refs/heads/main" && "${{ needs.coverage.result }}" == "failure" ]]; then
+            echo "❌ Coverage check failed"
             exit 1
           fi
           echo "✅ CI passed"
