--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,16 +4,13 @@
     "es6": true,
     "jest": true
   },
-  "extends": ["eslint:recommended"],
+  "extends": ["eslint:recommended", "prettier"],
   "parserOptions": {
     "ecmaVersion": 2020,
     "sourceType": "module"
   },
   "rules": {
     "no-console": "warn",
-    "indent": ["error", 2],
-    "quotes": ["error", "single"],
-    "semi": ["error", "always"],
     "complexity": ["error", { "max": 15 }],
     "max-depth": ["error", 4],
     "max-lines-per-function": [
