--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "axios": "^1.12.2",
     "codecov": "^3.8.2",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^10.1.8",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "nodemon": "^3.0.1",
