perf(ci): Optimize CI pipeline to reduce build times
Key optimizations:
- Disable redundant critical-coverage.yml (now manual-only)
- Collect coverage during sharded test runs instead of separate job
- Merge coverage from all shards using nyc
- Remove redundant jest --clearCache steps
- Increase Jest maxWorkers from 1 to 50% for parallel execution
- Simplify quality job (ESLint only, skip redundant checks)
- Use maxWorkers=2 in CI test shards

Before: Two workflows running ~14-17 min each (essentially 2x work)
After: Single optimized workflow with parallel shards + coverage merge

Expected improvement: ~50% reduction in total CI time

--- a/.github/workflows/critical-coverage.yml
+++ b/.github/workflows/critical-coverage.yml
@@ -1,10 +1,17 @@
 name: Critical Coverage CI
 
+# DISABLED - Coverage is now handled by unified-ci.yml with sharding
+# This workflow is kept for reference but no longer runs automatically
+# To re-enable, uncomment the 'on' triggers below
+
+# on:
+#   push:
+#     branches: [ main, develop ]
+#   pull_request:
+#     branches: [ main ]
+
 on:
-  push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:  # Manual trigger only
 
 jobs:
   critical-coverage:
