--- a/.github/workflows/unified-ci.yml
+++ b/.github/workflows/unified-ci.yml
@@ -1,8 +1,8 @@
 name: Aszune AI Bot CI/CD
 
-# Optimized CI workflow with parallel test sharding and conditional coverage
-# - Tests run in 3 parallel shards for faster execution
-# - Coverage only collected on main branch to speed up PRs
+# Optimized CI workflow - single workflow handles all testing
+# - Tests run in parallel shards WITH coverage collection
+# - Coverage merged from all shards
 # - Quality and security checks run in parallel with tests
 
 on:
@@ -32,17 +32,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run quality checks
-        run: npm run quality:check
-
-      - name: Run security scans
-        run: npm run security:dependencies
-        continue-on-error: true
+      - name: Run ESLint
+        run: npx eslint src/ --max-warnings=0
 
       - name: Security audit
         run: npm audit --audit-level=high --production
+        continue-on-error: true
 
-  # Parallel test shards (3x faster than sequential) - NO COVERAGE
+  # Parallel test shards with coverage collection
   test:
     name: Test (Shard ${{ matrix.shard }}/3)
     runs-on: ubuntu-latest
@@ -63,19 +60,25 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Clear Jest cache
-        run: npx jest --clearCache
-
-      - name: Run tests (no coverage - speed optimized)
-        run: npm test -- --shard=${{ matrix.shard }}/3 --no-coverage
+      - name: Run tests with coverage
+        run: |
+          npm test -- --shard=${{ matrix.shard }}/3 --coverage --coverageReporters=json --maxWorkers=2
         env:
           CI: true
           NODE_ENV: test
 
-  # Full coverage run (main branch only, no sharding)
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-shard-${{ matrix.shard }}
+          path: coverage/coverage-final.json
+          retention-days: 1
+
+  # Merge coverage from all shards (main branch only)
   coverage:
-    name: Coverage
+    name: Merge Coverage
     runs-on: ubuntu-latest
+    needs: test
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout repository
@@ -90,14 +93,19 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Clear Jest cache
-        run: npx jest --clearCache
+      - name: Download all coverage artifacts
+        uses: actions/download-artifact@v4
+        with:
+          pattern: coverage-shard-*
+          path: coverage-shards
 
-      - name: Run full test suite with coverage
-        run: npm test -- --coverage
-        env:
-          CI: true
-          NODE_ENV: test
+      - name: Merge coverage reports
+        run: |
+          mkdir -p coverage
+          # Merge all coverage JSON files
+          npx nyc merge coverage-shards coverage/coverage-final.json
+          # Generate reports
+          npx nyc report --reporter=json-summary --reporter=text --temp-dir=coverage
 
       - name: Validate coverage thresholds
         run: |
