chore: align ESLint/Prettier config for QLTY standards
- Add 'fix' npm script combining lint:fix + format
- Update quality:fix to run both ESLint and Prettier
- Update QLTY ESLint config to extend 'prettier' (removes formatting rules)
- ESLint now handles code quality only, Prettier handles formatting

--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "format": "prettier --write \"**/*.{js,json,md}\"",
     "lint": "eslint src __tests__",
     "lint:fix": "eslint src __tests__ --fix",
+    "fix": "npm run lint:fix && npm run format",
     "quality:check": "npm run test:critical:ci",
-    "quality:fix": "prettier --write \"**/*.{js,json,md}\"",
+    "quality:fix": "npm run lint:fix && npm run format",
     "quality:metrics": "echo \"Quality metrics: Use 'npm run coverage' for test coverage and 'npm run lint' for code quality\"",
     "quality:smells": "echo \"Code analysis: Use 'npm run lint' for code quality checks\"",
     "security:secrets": "echo \"Security: Manual review recommended for secrets\"",
