fix(qlty): sync QLTY configs with root project configs
Changes:
- .qlty/configs/.prettierrc: Add "endOfLine": "crlf" to match root
- .qlty/configs/.eslintrc.json: Add dashboard/public override to match root
- .qlty/qlty.toml: Explicitly point plugins to config files

This ensures QLTY uses the same rules as local development,
eliminating false positives from config mismatches.

--- a/.qlty/qlty.toml
+++ b/.qlty/qlty.toml
@@ -66,9 +66,11 @@ test_patterns = [
 
 [[plugin]]
 name = "eslint"
+config = ".qlty/configs/.eslintrc.json"
 
 [[plugin]]
 name = "prettier"
+config = ".qlty/configs/.prettierrc"
 
 [[plugin]]
 name = "gitleaks"
@@ -81,3 +83,4 @@ name = "semgrep"
 
 [[plugin]]
 name = "markdownlint"
+config = ".qlty/configs/.markdownlint.json"
