--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-config-prettier": "^10.1.8",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
+    "markdownlint-cli": "^0.46.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2"
   },
