feat(security): add instance tracking and license verification system
- Phone-home beacon registers instances with tracking server
- Tracks IP address and geolocation on startup
- Periodic heartbeats (1 hour interval)
- Kill switch for revoked instances
- Dashboard integration for viewing active instances
- Standalone tracking server script for deployment

Environment variables:
- INSTANCE_TRACKING_SERVER: Tracking server URL
- INSTANCE_TRACKING_ENABLED: Enable/disable tracking
- REQUIRE_VERIFICATION: Require verification to start
- TRACKING_ADMIN_KEY: Admin API key

Follows QLTY guidelines:
- Low cognitive complexity (<10 per function)
- Small focused helper modules
- Comprehensive test coverage (47 new tests)
- Structured error handling and logging

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,10 @@ BACKOFF_MIN_MS=500
 CHECK_INTERVAL_MS=5000
 CPU_THRESHOLD_PERCENT=80
 MEMORY_THRESHOLD_PERCENT=85
+
+# Instance Tracking (License Enforcement)
+# Set INSTANCE_TRACKING_SERVER to your tracking server URL to enable
+INSTANCE_TRACKING_SERVER=
+INSTANCE_TRACKING_ENABLED=false
+REQUIRE_VERIFICATION=false
+TRACKING_ADMIN_KEY=your-secret-admin-key
