--- a/.env.example
+++ b/.env.example
@@ -30,8 +30,8 @@ CPU_THRESHOLD_PERCENT=80
 MEMORY_THRESHOLD_PERCENT=85
 
 # Instance Tracking (License Enforcement)
-# Set INSTANCE_TRACKING_SERVER to your tracking server URL to enable
-INSTANCE_TRACKING_SERVER=
-INSTANCE_TRACKING_ENABLED=false
+# For local Pi deployment, use localhost
+INSTANCE_TRACKING_SERVER=http://localhost:3001/api/beacon
+INSTANCE_TRACKING_ENABLED=true
 REQUIRE_VERIFICATION=false
 TRACKING_ADMIN_KEY=your-secret-admin-key
