--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,5 @@ INSTANCE_TRACKING_SERVER=http://localhost:3001/api/beacon
 INSTANCE_TRACKING_ENABLED=true
 REQUIRE_VERIFICATION=false
 TRACKING_ADMIN_KEY=your-secret-admin-key
+# Comma-separated list of authorized IPs (your IP is auto-added)
+AUTHORIZED_IPS=
