--- a/.env.example
+++ b/.env.example
@@ -29,11 +29,9 @@ CHECK_INTERVAL_MS=5000
 CPU_THRESHOLD_PERCENT=80
 MEMORY_THRESHOLD_PERCENT=85
 
-# Instance Tracking (License Enforcement)
-# For local Pi deployment, use localhost
+# Analytics Server (for usage metrics)
+# For local deployment, use localhost
 INSTANCE_TRACKING_SERVER=http://localhost:3001/api/beacon
-INSTANCE_TRACKING_ENABLED=true
-REQUIRE_VERIFICATION=false
 TRACKING_ADMIN_KEY=your-secret-admin-key
 # Comma-separated list of authorized IPs (your IP is auto-added)
 AUTHORIZED_IPS=
