docs: add security notices for AI agents
- Add .github/AGENT-SECURITY.md explaining protected files
- Update COPILOT_INSTRUCTIONS.md with security notice
- Update copilot-instructions.md with security notice
- Add docs/PRIVATE-*.md to .gitignore (for local-only docs)

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ junit.xml
 commit_message.txt
 commit_msg.txt
 
+# Private documentation (never commit)
+docs/PRIVATE-*.md
+
 # Qlty output directories
 .qlty/logs/
 .qlty/out/
