--- a/.qlty/qlty.toml
+++ b/.qlty/qlty.toml
@@ -4,34 +4,6 @@ config_version = "0"
 name = "default"
 default = true
 
-# Core code quality plugins
-[plugins.enabled]
-eslint = "latest"
-prettier = "latest"
-gitleaks = "latest"
-trivy = "latest"
-semgrep = "latest"
-complexity = "latest"
-duplication = "latest"
-markdownlint = "latest"
-
-# JavaScript/Node.js specific settings
-[language.javascript]
-enabled = true
-globs = ["**/*.js", "**/*.mjs", "**/*.cjs"]
-
-[language.json]
-enabled = true
-globs = ["**/*.json"]
-
-[language.markdown]
-enabled = true
-globs = ["**/*.md"]
-
-[language.yaml]
-enabled = true
-globs = ["**/*.yml", "**/*.yaml"]
-
 # Exclude patterns for files we don't want to analyze
 exclude_patterns = [
   "node_modules/**",
@@ -44,9 +16,16 @@ exclude_patterns = [
   ".env*"
 ]
 
-# Code smell detection configuration - using correct QLTY syntax
-# Each smell type is its own TOML section
+# Test patterns
+test_patterns = [
+  "**/__tests__/**",
+  "**/*.test.js",
+  "**/*.spec.js",
+  "**/jest.*.js",
+  "**/test/**"
+]
 
+# Code smell detection configuration
 [smells.identical_code]
 enabled = true
 threshold = 50
@@ -71,35 +50,17 @@ threshold = 6
 enabled = true
 threshold = 7
 
-[smells.boolean_parameters]
-enabled = false
-
 [smells.nested_control_flow]
 enabled = true
 threshold = 4
 
-# Test patterns
-test_patterns = [
-  "**/__tests__/**",
-  "**/*.test.js",
-  "**/*.spec.js",
-  "**/jest.*.js",
-  "**/test/**"
-]
-
-# ESLint configuration
-# Note: Config files in .qlty/configs/ are auto-copied to root during analysis
+# Plugin configurations
 [[plugin]]
 name = "eslint"
-# Monitor mode for dashboard files (uses browser globals, has console.log)
-# The root .eslintrc.json has overrides for dashboard/public/ with no-console: off
 
-# Prettier configuration  
 [[plugin]]
 name = "prettier"
-# Uses .prettierrc from root or .qlty/configs/
 
-# Security scanners
 [[plugin]]
 name = "gitleaks"
 
@@ -109,7 +70,5 @@ name = "trivy"
 [[plugin]]
 name = "semgrep"
 
-# Markdown linting
 [[plugin]]
 name = "markdownlint"
-# Uses .markdownlint.json from root
