fix(qlty): move exclude_patterns and test_patterns to root level
- Remove [[source]] section that was causing config warnings
- Move exclude_patterns to root level (not under source)
- Move test_patterns to root level (not under source)
- Fixes QLTY warnings about unsupported configuration entries

--- a/.qlty/qlty.toml
+++ b/.qlty/qlty.toml
@@ -1,10 +1,6 @@
 config_version = "0"
 
-[[source]]
-name = "default"
-default = true
-
-# Exclude patterns for files we don't want to analyze
+# Exclude patterns for files we don't want to analyze (root level)
 exclude_patterns = [
   "node_modules/**",
   "coverage/**",
@@ -16,7 +12,7 @@ exclude_patterns = [
   ".env*"
 ]
 
-# Test patterns
+# Test patterns (root level)
 test_patterns = [
   "**/__tests__/**",
   "**/*.test.js",
